# hw-koans

./: .ghc.environment.x86_64-darwin-8.4.4  .ghc.environment.x86_64-darwin-8.6.5  .ghc.environment.x86_64-darwin-8.8.3  .gitignore  .stylish-haskell.yaml  LICENSE  README.md  circle.yml  hw-koans.cabal  package.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
data/: GeoFeed.dsv
koan/: Koan.hs  Main.hs
koan/Koan/: Alternative.hs  Applicative.hs  Either.hs  Eq.hs  Function.hs  Functor.hs  GeoFeedParser.hs  List.hs  Maybe.hs  Monad.hs  Ord.hs  Parser.hs  Reader.hs  Simple.hs  Start.hs  State.hs
koan/Koan/Parser/: Csv.hs  Json.hs
koan/Koan/Parser/Json/: Test.hs
koan/applicative/: Main.hs
koan/applicative/Koan/: Applicative.hs
koan/eq/: Main.hs
koan/eq/Koan/: Eq.hs
koan/functor/: Main.hs
koan/functor/Koan/: Functor.hs
koan/ord/: Main.hs
koan/ord/Koan/: Ord.hs
solution/: Koan.hs  README.md  hw-koans-solution.cabal  package.yaml  stack.yaml
solution/.stack-work/install/x86_64-osx/lts-8.11/8.0.2/flag-cache/: hedgehog-0.1-E3aiPZpgnrw1MmRtaiGdnp  hw-koans-solution-0.1.0.0-4EpL2iC6kfy3otfeEp3mF6
solution/.stack-work/install/x86_64-osx/lts-8.11/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHShedgehog-0.1-E3aiPZpgnrw1MmRtaiGdnp-ghc8.0.2.dylib  libHShw-koans-solution-0.1.0.0-4EpL2iC6kfy3otfeEp3mF6-ghc8.0.2.dylib
solution/.stack-work/install/x86_64-osx/lts-8.11/8.0.2/pkgdb/: hedgehog-0.1-E3aiPZpgnrw1MmRtaiGdnp.conf  hw-koans-solution-0.1.0.0-4EpL2iC6kfy3otfeEp3mF6.conf  package.cache
solution/Koan/: Alternative.hs  Applicative.hs  Either.hs  Eq.hs  Function.hs  Functor.hs  GeoFeedParser.hs  List.hs  Maybe.hs  Monad.hs  Ord.hs  Parser.hs  Reader.hs  Simple.hs  Start.hs  State.hs
solution/Koan/Parser/: Csv.hs  Json.hs
solution/Koan/Parser/Json/: Test.hs
src/: Lib.hs
src/Koan/: Applicative.hs  Eq.hs  Functor.hs  Ord.hs  Start.hs
test/: Main.hs
test/Check/: Alternative.hs  Applicative.hs  Either.hs  Eq.hs  Function.hs  Functor.hs  GeoFeedParser.hs  List.hs  Maybe.hs  Monad.hs  Ord.hs  Parser.hs  Reader.hs  Simple.hs  Start.hs  State.hs
test/Check/Parser/: Csv.hs  Json.hs
test/Check/Parser/Csv/: Ref.hs
test/Check/Parser/Json/: Test.hs
test/Hedgehog/: Extra.hs
