cabal-version: 2.4

name:                   hw-koans
version:                0.1.0.0
category:               Web
synopsis:               hw-koans
description:            hw-koans.
homepage:               https://github.com/githubuser/hw-koans#readme
bug-reports:            https://github.com/githubuser/hw-koans/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2017-2019 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type: git
  location: https://github.com/githubuser/hw-koans

common config
  default-language:     Haskell2010

library
  import:               config
  exposed-modules:      Koan
                        Koan.Alternative
                        Koan.Applicative
                        Koan.Either
                        Koan.Eq
                        Koan.GeoFeedParser
                        Koan.Function
                        Koan.Functor
                        Koan.List
                        Koan.Maybe
                        Koan.Monad
                        Koan.Ord
                        Koan.Reader
                        Koan.Simple
                        Koan.Start
                        Koan.State
  other-modules:        Paths_hw_koans
  autogen-modules:      Paths_hw_koans
  hs-source-dirs:       koan
  build-depends:        base >=4.7 && <5
                      , attoparsec
                      , bytestring
                      , hedgehog
                      , hw-hedgehog
                      , megaparsec
                      , mtl
                      , text

test-suite koan-test
  import:               config
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  other-modules:        Check.Alternative
                        Check.Applicative
                        Check.Either
                        Check.Eq
                        Check.Function
                        Check.Functor
                        Check.GeoFeedParser
                        Check.List
                        Check.Maybe
                        Check.Monad
                        Check.Ord
                        Check.Reader
                        Check.Simple
                        Check.Start
                        Check.State
                        Hedgehog.Extra
                        Paths_hw_koans
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        attoparsec
                      , base
                      , bytestring
                      , hedgehog
                      , hw-hedgehog
                      , hw-koans
                      , megaparsec
                      , mtl
                      , text
