cabal-version: 2.4

name:                   hw-koans
version:                0.1.0.0
category:               Web
synopsis:               hw-koans
description:            hw-koans.
homepage:               https://github.com/githubuser/hw-koans#readme
bug-reports:            https://github.com/githubuser/hw-koans/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2017-2021 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
tested-with:            GHC == 9.0.1, GHC == 8.10.7, GHC == 8.8.4, GHC == 8.6.5
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type: git
  location: https://github.com/githubuser/hw-koans

common base                 { build-depends: base                 >= 4          && < 5      }

common attoparsec           { build-depends: attoparsec           >= 0.13.2.3   && < 0.15   }
common bytestring           { build-depends: bytestring           >= 0.10       && < 0.12   }
common directory            { build-depends: directory            >= 1.3.4.0    && < 1.4    }
common hedgehog             { build-depends: hedgehog             >= 1.0.1      && < 1.2    }
common hw-hedgehog          { build-depends: hw-hedgehog          >= 0.1.0.5    && < 0.2    }
common megaparsec           { build-depends: megaparsec           >= 8.0.0      && < 9.2    }
common mtl                  { build-depends: mtl                  >= 2.2.2      && < 2.3    }
common text                 { build-depends: text                 >= 1.2.3.0    && < 1.3    }

common config
  default-language:     Haskell2010

common hw-koans
  build-depends:        hw-koans

common hw-koans-solution
  build-depends:        hw-koans-solution

library
  import:               base, config
                      , attoparsec
                      , bytestring
                      , hedgehog
                      , hw-hedgehog
                      , megaparsec
                      , mtl
                      , text
  exposed-modules:      Koan
                        Koan.Alternative
                        Koan.Applicative
                        Koan.Either
                        Koan.Eq
                        Koan.GeoFeedParser
                        Koan.Function
                        Koan.Functor
                        Koan.List
                        Koan.Maybe
                        Koan.Monad
                        Koan.Ord
                        Koan.Reader
                        Koan.Simple
                        Koan.Start
                        Koan.State
  other-modules:        Paths_hw_koans
  autogen-modules:      Paths_hw_koans
  hs-source-dirs:       koan

test-suite koan-test
  import:               base, config
                      , attoparsec
                      , base
                      , bytestring
                      , directory
                      , hedgehog
                      , hw-hedgehog
                      , hw-koans
                      , megaparsec
                      , mtl
                      , text
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  other-modules:        Check.Alternative
                        Check.Applicative
                        Check.Either
                        Check.Eq
                        Check.Function
                        Check.Functor
                        Check.GeoFeedParser
                        Check.List
                        Check.Maybe
                        Check.Monad
                        Check.Ord
                        Check.Reader
                        Check.Simple
                        Check.Start
                        Check.State
                        Hedgehog.Extra
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

library hw-koans-solution
  import:               base, config
                      , attoparsec
                      , bytestring
                      , hedgehog
                      , hw-hedgehog
                      , megaparsec
                      , mtl
                      , text
  hs-source-dirs:       solution
  exposed-modules:      Koan
                        Koan.Alternative
                        Koan.Applicative
                        Koan.Either
                        Koan.Eq
                        Koan.Function
                        Koan.Functor
                        Koan.GeoFeedParser
                        Koan.List
                        Koan.Maybe
                        Koan.Monad
                        Koan.Ord
                        Koan.Reader
                        Koan.Simple
                        Koan.Start
                        Koan.State

test-suite hw-koans-solution-test
  import:               base, config
                      , attoparsec
                      , bytestring
                      , directory
                      , hedgehog
                      , hw-hedgehog
                      , hw-koans-solution
                      , megaparsec
                      , mtl
                      , text
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              Main.hs
  other-modules:        Check.Alternative
                        Check.Applicative
                        Check.Either
                        Check.Eq
                        Check.Function
                        Check.Functor
                        Check.GeoFeedParser
                        Check.List
                        Check.Maybe
                        Check.Monad
                        Check.Ord
                        Check.Reader
                        Check.Simple
                        Check.Start
                        Check.State
                        Hedgehog.Extra
