name:                   hw-koans-solution
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/hw-koans#readme
license:                BSD3
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Web
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       .
  exposed-modules:      Koan
                      , Koan.Alternative
                      , Koan.Applicative
                      , Koan.Either
                      , Koan.Eq
                      , Koan.Function
                      , Koan.Functor
                      , Koan.GeoFeedParser
                      , Koan.List
                      , Koan.Maybe
                      , Koan.Monad
                      , Koan.Ord
                      , Koan.Parser
                      , Koan.Parser.Csv
                      , Koan.Parser.Json
                      , Koan.Parser.Json.Test
                      , Koan.Reader
                      , Koan.Simple
                      , Koan.Start
                      , Koan.State
  build-depends:        base >= 4.7 && < 5
                      , attoparsec
                      , bytestring
                      , hedgehog
                      , hw-hedgehog
                      , megaparsec
                      , mtl
                      , text
  default-language:     Haskell2010

test-suite koan-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       ../test
  main-is:              Main.hs
  other-modules:        Check.Alternative
                      , Check.Applicative
                      , Check.Either
                      , Check.Eq
                      , Check.Function
                      , Check.Functor
                      , Check.List
                      , Check.Maybe
                      , Check.Monad
                      , Check.Ord
                      , Check.Parser
                      , Check.Parser.Csv
                      , Check.Parser.Csv.Ref
                      , Check.Parser.Json
                      , Check.Parser.Json.Test
                      , Check.Reader
                      , Check.Simple
                      , Check.Start
                      , Check.State
                      , Hedgehog.Extra
  build-depends:        base
                      , attoparsec
                      , bytestring
                      , text
                      , hedgehog
                      , hw-koans-solution
                      , hw-hedgehog
                      , megaparsec
                      , mtl
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw-koans-solution
